* Added user/confirmation.php which will confirm the order after payment.php in eZ trade.
* Added include for cache in headlines.php in eZ article.
* Added advanced user search in eZ user.
* Fixed bug with permissions in advanced search in eZ article.
* Fixed bug in eZ filemanager in fileview.
* Fixed bug in eZ imagecatalogue when browsing images in imagelist

Changes from 2.2.3 to 2.2.4
---------------------------
* When user uploads a file to a upload only folder userid is now kept
* Fixed wrong path in forgot password mail using nvh setup
* Fixed rendering bug of bullet lists where list items where split
* Fixed bug in timepublising
* Fixed permission bug in author view.
* Fixed permission problem with only set categorypermission and non logged in users
* Added default .htaccess file 
* Fixed problem with html in eZ forum
* Fixed bug when changing permissions
* Fixed permission problems in eZ article
* Fixed bug with deleting of contacts after a search
* Fixed problem with redirecting on nVH setup n eZ bug
* Fixed bug where file tag did not appear inside factbox and bold
* Fixed bug where image edit was shown without the correct permissions
* Fixed bug with adding addresses to contacts
* Fixed bug with escape of characters in the comment field in checkout
* Fixed bug with categories in eZ imagecatalogue
* Fixed bug with xml in eZ newsfeed
* Fixed bug with referers in eZ stats
* Fixed bug with attributes in eZ link
* Fixed demo data in eZ newsfeed
* Fixed xml bug in techrenderer.
* Fixed bug with unpublished articles in categories excluded from search
* Fixed problems with new games in eZ quiz (added SQL fix)
* Fixed several problems with sections in eZ imagecatalogue

Changes from 2.2.2 to 2.2.3
---------------------------
* Fixed bug where some words in article were ignored in search
* Fixed a permission problem which would sometimes not display articles, even if you had permission to it
* Removed dependency to mysql_escape_string() when using postgresql