@@ -29,6 +29,7 @@ Changes from 2.2.4 to 2.2.5
 * Fixed bug with permissions in advanced search in eZ article.
 * Fixed bug in eZ filemanager in fileview.
 * Fixed bug in eZ imagecatalogue when browsing images in imagelist
+* fixed bug with day and month report in eZ stats.
 
 Changes from 2.2.3 to 2.2.4
 ---------------------------
